# web-tutoria

./: .gitignore  .hintrc  README.md
backend/api/: DEMO_CHECKLIST.md  DEMO_RESPONSES.md  README.md  download-sign-video-model.sh  pyproject.toml  requirements-dev.txt  requirements-sign-video.txt  setup-venv.sh  start-dev.sh  test-photo-explain.sh  test-sign-sequence-upload.sh  test-sign-speech.sh  test-sign-upload.sh  test-speech.sh  test-tts.sh  warmup-kokoro.sh  warmup-stt.sh
backend/api/app/: __init__.py  main.py
backend/api/app/api/: router.py
backend/api/app/api/routes/: auth.py  health.py  meta.py  (+5 more)
backend/api/app/core/: config.py
backend/api/app/data/: ksl_glossary.json  ksl_lesson_catalog.json  ksl_sign_v1_labels.json
backend/api/app/db/: __init__.py  models.py  session.py
backend/api/app/integrations/: README.md  azure_speech_client.py  elevenlabs_client.py  faster_whisper_client.py  kokoro_client.py  mediapipe_sign_client.py
backend/api/app/pipelines/: README.md
backend/api/app/schemas/: requests.py  responses.py
backend/api/app/services/: README.md  auth_service.py  health_service.py  lesson_asset_service.py  photo_explain_service.py  sign_features.py  sign_recognizer.py  sign_to_text_service.py  speech_service.py  text_to_ksl_service.py
backend/api/tests/: README.md  conftest.py  test_auth.py  test_health.py  test_mediapipe_sign_client.py  test_meta.py  test_photo_explain.py  test_sign_to_text.py  test_speech_to_text.py  test_text_to_ksl.py  test_text_to_speech.py
backend/api/web_tutoria_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1548 files in other folders)
