[project]
name = "web-tutoria-api"
version = "0.1.0"
description = "Backend API for the Web Tutoria KSL learning system."
requires-python = ">=3.11,<3.13"
dependencies = [
  "faster-whisper",
  "fastapi>=0.115.0",
  "kokoro==0.7.16",
  "misaki==0.9.4",
  "numpy",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "python-multipart",
  "soundfile",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
